# comp0250

./: .gitignore  .gitmodules  LICENSE.txt  README.md
src/cw1_team_39/: CMakeLists.txt  package.xml
src/cw1_team_39/include/: FindObjects.h  cw1_class.h  move_and_place.h  obj_rec.h  obj_rec_tutorial.h
src/cw1_team_39/launch/: run_solution.launch
src/cw1_team_39/src/: FindObjects.cpp  cw1_class.cpp  cw1_node.cpp  move_and_place.cpp  obj_rec.cpp  obj_rec_tutorial.cpp
src/cw1_team_39/srv/: example.srv
src/cw1_world_spawner/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
src/cw1_world_spawner/launch/: world_spawner.launch
src/cw1_world_spawner/scripts/: world_spawner.py
src/cw1_world_spawner/srv/: Task1Service.srv  Task2Service.srv  TaskSetup.srv
src/panda_description/: CMakeLists.txt  package.xml
src/panda_description/config/: panda_control.yaml
src/panda_description/launch/: description.launch
src/panda_description/rviz/: urdf.rviz
src/panda_description/sdf/: empty_panda.world  empty_panda_noShadow.world
src/panda_description/srdf/: panda_with_rs.srdf.xacro
src/panda_description/urdf/: panda_arm_hand.urdf.xacro  panda_with_rs.urdf.xacro
src/panda_description/xacro/: hand.xacro  panda.control.xacro  panda.gazebo.xacro  panda.transmission.xacro  panda_arm.xacro
src/panda_moveit_config/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/panda_moveit_config/config/: chomp_planning.yaml  (+11 more)
src/realsense_gazebo_plugin/: CMakeLists.txt  README.md  package.xml
src/rpl_panda_with_rs/: CMakeLists.txt  README.md  package.xml
(+75 files in other folders)
