<?xml version="1.0"?>
<package format="2">
  <name>cw1_team_39</name> <!-- change your team name here! -->
  <version>0.0.0</version>
  <description>
  A package template for the cw1 solution. The name should be changed to the team 
  number, for example team 3 would change the name to cw1_team_3.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="luke@todo.todo">luke</maintainer>

  <!-- One license tag required -->
  <license>MIT</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Export dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Other dependencies -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>cw1_world_spawner</depend>

  <export>
    <!-- Other tools can request additional information here -->
  </export>
</package>
